src/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser;

import ast.*;

public class Parser implements ParserConstants {

  static final public ASTNode begin() throws ParseException {
    ASTNode root;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      root = atom();
      break;
    case 0:
    case LPAR:
      root = list();
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return root;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode atom() throws ParseException {
    Token token;
    ASTNode node;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      token = jj_consume_token(INTEGER);
                          node = new NumberNode(Integer.parseInt(token.image));
      break;
    case FLOAT:
      token = jj_consume_token(FLOAT);
                          node = new NumberNode(Double.parseDouble(token.image));
      break;
    case SYMBOL:
      token = jj_consume_token(SYMBOL);
                          node = new SymbolNode(token.image);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode list() throws ParseException {
    ASTNode  node = null, t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAR:
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
      case LPAR:
      case INTEGER:
      case FLOAT:
      case SYMBOL:
        node = app();
        break;
      case ADD:
        node = add();
        break;
      case SUB:
        node = sub();
        break;
      case MUL:
        node = mul();
        break;
      case DIV:
        node = div();
        break;
      case LET:
        node = let();
        break;
      case LAMBDA:
        node = lambda();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAR);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode app() throws ParseException {
    ASTNode node = new ListNode(),
            f,
            a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      f = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      f = atom();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
            node.addChild(f);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      a = list();
                         node.addChild(a);
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      a = atom();
                         node.addChild(a);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode add() throws ParseException {
    ASTNode node,
            lhs,
            rhs;
    jj_consume_token(ADD);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      lhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      lhs = atom();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      rhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      rhs = atom();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new AdditionNode(lhs, rhs);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode sub() throws ParseException {
    ASTNode node,
            lhs,
            rhs;
    jj_consume_token(SUB);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      lhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      lhs = atom();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      rhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      rhs = atom();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new SubtractionNode(lhs, rhs);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode mul() throws ParseException {
    ASTNode node,
            lhs,
            rhs;
    jj_consume_token(MUL);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      lhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      lhs = atom();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      rhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      rhs = atom();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new MultiplicationNode(lhs, rhs);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode div() throws ParseException {
    ASTNode node,
            lhs,
            rhs;
    jj_consume_token(DIV);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      lhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      lhs = atom();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      rhs = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      rhs = atom();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new DivisionNode(lhs, rhs);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode let() throws ParseException {
    ASTNode node,
            bindings = new ListNode(),
            body,
            t;
    jj_consume_token(LET);
    jj_consume_token(LPAR);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_1;
      }
      t = binding();
                        bindings.addChild(t);
    }
    jj_consume_token(RPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      body = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      body = atom();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new LetNode(bindings, body);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode binding() throws ParseException {
    ASTNode node = new ListNode(),
            expr;
    Token   token;
    jj_consume_token(LPAR);
    token = jj_consume_token(SYMBOL);
                       node.addChild(new SymbolNode(token.image));
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      expr = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      expr = atom();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        node.addChild(expr);
    jj_consume_token(RPAR);
        {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode lambda() throws ParseException {
    ASTNode t,
            params,
            body;
    jj_consume_token(LAMBDA);
    jj_consume_token(LPAR);
    params = atom();
    jj_consume_token(RPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
    case LPAR:
      body = list();
      break;
    case INTEGER:
    case FLOAT:
    case SYMBOL:
      body = atom();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return new LambdaNode(params, body);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x10341,0x10300,0x1ff41,0x41,0x10341,0x10341,0x10341,0x10341,0x10341,0x10341,0x10341,0x10341,0x10341,0x10341,0x40,0x10341,0x10341,0x10341,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[18];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 18; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 18; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

                     }
